<resources>
    <string name="app_name">MoodTracker</string>
    <string name="text_centre">Hello world!</string>

    //sign up
    <string name="enterEmail">Email</string>
    <string name="enterPassword">Password</string>
    <string name="signUpFinalButton">Register</string>

    //login
    <string name="registerButton">Create An Account</string>
    <string name="loginButton">Login</string>

    //mood test
    <string name="moodTest">Mood Test</string>
    <string name="backButton">Done</string>
    <string name="cancelButton">Cancel</string>

    //survey
    <string name="intro_title">Beck\'s Depression Inventory</string>
    <string name="intro_text">This survey will calculate your daily mood score,
        and add it to the tracker. Please choose the best fitting score in the drop down lists, using a scale from 0 to 3.</string>
    <string name="intro_start">Start Test</string>

    <string-array name="answers_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="question1_text"> Question 1:&#xA;<br />
        0 - I do not feel sad.&#xA;<br />
        1 - I feel sad.&#xA;<br />
        2 - I am sad all the time and I can not snap out of it.&#xA;<br />
        3 - I am so sad and unhappy that I can not stand it.</string>

    <string name="question2_text"> Question 2:<br />
        0 - I am not particularly discouraged about the future.<br />
        1 - I feel discouraged about the future.<br />
        2 - I feel I have nothing to look forward to.<br />
        3 - I feel the future is hopeless and that things cannot improve.</string>


    <string name="question3_text"> Question 3:<br />
        0 - I do not feel like a failure.<br />
        1 - I feel I have failed more than the average person.<br />
        2 - As I look back on my life, all I can see is a lot of failures.<br />
        3 - I feel I am a complete failure as a person.</string>


    <string name="question4_text"> Question 4:<br />
        0 - I get as much satisfaction out of things as I used to.<br />
        1 - I do not enjoy things the way I used to.<br />
        2 - I do not get real satisfaction out of anything anymore.<br />
        3 - I am dissatisfied or bored with everything.
    </string>


    <string name="question5_text"> Question 5:<br />
        0 - I do not feel particularly guilty.<br />
        1 - I feel guilty a good part of the time.<br />
        2 - I feel quite guilty most of the time.<br />
        3 - I feel guilty all of the time.</string>

    <string name="question6_text"> Question 6:<br />
        0 - I do not feel I am being punished.<br />
        1 - I feel I may be punished.<br />
        2 - I expect to be punished.<br />
        3 - I feel I am being punished.</string>

    <string name="question7_text"> Question 7:<br />
        0 - I do not feel disappointed in myself.<br />
        1 - I am disappointed in myself.<br />
        2 - I am disgusted with myself.<br />
        3 - I hate myself.</string>

    <string name="question8_text"> Question 8:<br />
        0 - I do not feel I am any worse than anybody else.<br />
        1 - I am critical of myself for my weaknesses or mistakes.<br />
        2 - I blame myself all the time for my faults.<br />
        3 - I blame myself for everything bad that happens. </string>

    <string name="question9_text"> Question 9:<br />
        0 - I do not have any thoughts of killing myself.<br />
        1 - I have thoughts of killing myself, but I would not carry them out.<br />
        2 - I would like to kill myself. <br />
        3 - I would kill myself if I had the chance.</string>

    <string name="question10_text"> Question 10:<br />
        0 - I do not cry any more than usual.<br />
        1 - I cry more now than I used to.<br />
        2 - I cry all the time now.<br />
        3 - I used to be able to cry, but now I cannot cry even though I want to.</string>

    <string name="question11_text"> Question 11:<br />
        0 - I am no more irritated by things than I ever was.<br />
        1 - I am slightly more irritated now than usual.<br />
        2 - I am quite annoyed or irritated a good deal of the time.<br />
        3 - I feel irritated all the time.</string>

    <string name="question12_text"> Question 12:<br />
        0 - I have not lost interest in other people.<br />
        1 - I am less interested in other people than I used to be.<br />
        2 - I have lost most of my interest in other people.<br />
        3 - I have lost all of my interest in other people.</string>

    <string name="question13_text"> Question 13:<br />
        0 - I make decisions about as well as I ever could.<br />
        1 - I put off making decisions more than I used to. <br />
        2 - I have greater difficulty in making decisions more than I used to.<br />
        3 - I cannot make decisions at all anymore.</string>

    <string name="question14_text"> Question 14:<br />
        0 - I do not feel that I look any worse than I used to.<br />
        1 - I am worried that I am looking old or unattractive. <br />
        2 - I feel there are permanent changes in my appearance that make me look unattractive.<br />
        3 - I believe that I look ugly.</string>

    <string name="question15_text"> Question 15:<br />
        0 - I can work about as well as before. <br />
        1 - It takes an extra effort to get started at doing something.<br />
        2 - I have to push myself very hard to do anything.<br />
        3 - I cannot do any work at all.</string>

    <string name="question16_text"> Question 16:<br />
        0 - I can sleep as well as usual.<br />
        1 - I do not sleep as well as I used to.<br />
        2 - I wake up 1-2 hours earlier than usual and find it hard to get back to sleep.<br />
        3 - I wake up several hours earlier than I used to and cannot get back to sleep.</string>

    <string name="question17_text"> Question 17:<br />
        0 - I do not get more tired than usual.<br />
        1 - I get tired more easily than I used to.<br />
        2 - I get tired from doing almost anything.<br />
        3 - I am too tired to do anything.</string>

    <string name="question18_text"> Question 18:<br />
        0 - My appetite is no worse than usual.<br />
        1 - My appetite is not as good as it used to be. <br />
        2 - My appetite is much worse now.<br />
        3 - I have no appetite at all anymore.</string>

    <string name="question19_text"> Question 19:<br />
        0 - I have not lost much weight, if any, lately.<br />
        1 - I have lost more than five pounds.<br />
        2 - I have lost more than ten pounds.<br />
        3 - I have lost more than fifteen pounds.</string>

    <string name="question20_text"> Question 20:<br />
        0 - I am no more worried about my health than usual.<br />
        1 - I am worried about physical problems like aches, pains, upset stomach, or constipation.<br />
        2 - I am very worried about physical problems and it is hard to think of much else.<br />
        3 - I am so worried about my physical problems that I cannot think of anything else.</string>

    <string name="question21_text"> Question 21:<br />
        0 - I have not noticed any recent change in my interest in sex.<br />
        1 - I am less interested in sex than I used to be.<br />
        2 - I have almost no interest in sex.<br />
        3 - I have lost interest in sex completely.</string>









    //emergency contacts
    <string name="emergencyButton">HELP</string>
    <string name="contactMind">For a list of mental health crisis helplines, please visit mind.org.uk</string>
    <string name="mindBtn">Take me there</string>

    //info activity
    <string name="how_it_works_title">How does the app work?</string>
    <string name="how_it_works">Simply complete the mood test each day, adding your score to the
        mood tracking graph, and showing you how your mood changes over time.</string>

    <string name="test_works">How does the mood test work?</string>
    <string name="test_instructions">When you carry out a new mood test, all you have to do is
        select an answer, ranging from 0-3, for each of the 21 questions. The app will
    then calculate your score and automatically add it to the tracker. You can see
    your latest score above the graph, as well as the evaluation.</string>

    <string name="score_title">What do the scores mean?</string>
    <string name="score_eval1">1-10____________________These ups and downs are considered normal </string>
    <string name="score_eval2">11-16___________________ Mild mood disturbance</string>
    <string name="score_eval3">17-20___________________Borderline clinical depression </string>
    <string name="score_eval4">21-30___________________Moderate depression </string>
    <string name="score_eval5">31-40___________________Severe depression</string>
    <string name="score_eval6">over 40__________________Extreme depression</string>





</resources>