<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/how_it_works_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_it_works_title"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/how_it_works"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_it_works"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/test_works"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_works"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_instructions"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/score_eval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_title"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/score_eval1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_eval1" />

    <TextView
        android:id="@+id/score_eval2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_eval2" />

    <TextView
        android:id="@+id/score_eval3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_eval3" />

    <TextView
        android:id="@+id/score_eval4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_eval4" />

    <TextView
        android:id="@+id/score_eval5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_eval5" />

    <TextView
        android:id="@+id/score_eval6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_eval6" />

</LinearLayout>



    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:fabCradleMargin="20dp"
        android:layout_gravity="bottom">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:menu="@menu/bottom_nav_menu"
            android:layout_marginEnd="16dp"
            android:background="@color/transparent">

        </com.google.android.material.bottomnavigation.BottomNavigationView>

    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/newMoodTestBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_anchor="@id/bottomAppBar">
    </com.google.android.material.floatingactionbutton.FloatingActionButton>
</androidx.coordinatorlayout.widget.CoordinatorLayout>