<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <EditText
        android:id="@+id/enterNewEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:hint="@string/enterEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/enterNewPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

    </EditText>

    <EditText
        android:id="@+id/enterNewPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/enterPassword"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/signUpBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterNewEmail">

    </EditText>

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/signUpFinalButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterNewPassword" />



</androidx.constraintlayout.widget.ConstraintLayout>